--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -1,4 +1,4 @@
-<section class="py-5 position-relative">
+<section class="py-5 bg-light position-relative">
   <span class="anchor" id="about"></span>
   <div class="container">
     {% include heading.html classname="text-center" title="Explain, Understand, Act" subtitle="With the Sibyl libraries, you can augment machine learning applications for smoother human-ML interactions." %}
