--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
           </li>
           {% endfor %}
         </ul>
-        <a href="https://giving.mit.edu/search/node/Veeramachaneni" class="btn btn-lg btn-light rounded-sm text-dark me-2 global_nav__btn ml-lg-4 px-4">Donate</a>
+        <a href="https://giving.mit.edu/search/node/Veeramachaneni" class="btn font-weight-semibold btn-light rounded-sm text-dark me-2 global_nav__btn ml-lg-4 px-4">Donate</a>
       </div>
   </div>
 </nav>
