--- a/_includes/software.html
+++ b/_includes/software.html
@@ -1,7 +1,7 @@
 <section class="py-3 bg-light position-relative" id="">
   <span class="anchor" id="software"></span>
   <div class="container">
-    {% include heading.html classname="text-center" title="Software" %}
+    {% include heading.html classname="text-center" title="Software" subtitle="Check back here soon as our libraries go public!" %}
     {% for item in site.data.software %}
     {% comment %}
     <div class="row">
