--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,37 +1,31 @@
 <section class="bg-light hero overflow-hidden" id="top">
   <div class="container py-5">
     <div class="row align-items-center">
-      <div class="col-lg-6">
-      
-        <div class="mt-n3 mt-lg-n5 text-white">
-          <!-- <img src="/images/Logo.svg" width="200" alt="Sibyl" class="mx-auto mt-4 mb-4 d-block img-fluid"> -->
+      <div class="col-md-6 col-lg-5">
+        <div class="text-white">
           <div style="max-width: 480px;" class="text-center text-lg-left">
             <div class="row mb-4 d-flex justify-content-center justify-content-lg-start">
               <div class="col-auto">
                 <img src="{{'images/Sibyl-icon+text.svg' | relative_url }}" width="320"  class="d-inline-block align-top logo w-75" alt="Sibyl logo" loading="lazy">
               </div>
-              
             </div>
-            
-            
-            <h2 class="h4">Making Machine Learning Usable</h2>
-            <p>
+            <h2 class="h3">Making Machine Learning Usable</h2>
+            <p class="h5 font-weight-normal">
               Framework for applying ML explanations and augmentations for real-world decision making
             </p>
             <p class="mt-5">
-              <a href="https://github.com/sibyl-dev" class="btn btn-sm btn-light" target="_blank">
+              <a href="https://github.com/sibyl-dev" class="btn btn-light h5 mr-2" target="_blank">
                 <img width="18" height="18" src="/images/github.svg" style="vertical-align:text-bottom;"/>
                 Github</a>
-              <a href="https://app.slack.com/client/T02HV2S1Y91/C02HX8E6FA8" class="btn btn-sm btn-light">
+              <a href="https://app.slack.com/client/T02HV2S1Y91/C02HX8E6FA8" class="btn btn-light h5">
                 <img width="18" height="18" src="/images/slack.svg" style="vertical-align:text-bottom;"/>
                 Join Slack community</a>
             </p>
           </div>
-          
         </div>
       </div>
-      <div class="col-lg-6 py-5">
-        <img src="/images/Banner.svg" width="712" alt="Sibyl banner" class="mx-auto d-block hero-image img-fluid">
+      <div class="col-lg-5 col-md-6 offset-lg-1 py-5 md:px-5">
+        <img src="/images/Banner.svg" alt="Sibyl banner" class="mx-auto d-block img-fluid">
       </div>
     </div>
   </div>
