--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
 
     <link rel="stylesheet" href="{{'/css/main.css' | absolute_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="icon" type="image/png" href="{{'/images/favicon.png' | relative_url}}"/>
-    <link rel="apple-touch-icon" href="{{'/images/favicon.png' | relative_url}}">
+    <link rel="icon" type="image/png" href="{{'/images/favicon.png' | absolute_url}}"/>
+    <link rel="apple-touch-icon" href="{{'/images/favicon.png' | absolute_url}}">
 
   </head>
   <body>
