--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
           <div style="max-width: 480px;" class="text-center text-lg-left">
             <div class="row mb-4 d-flex justify-content-center justify-content-lg-start">
               <div class="col-auto">
-                <img src="{{'images/Sibyl-icon+text.svg' | relative_url }}" width="320"  class="d-inline-block align-top logo w-75" alt="Sibyl logo" loading="lazy">
+                <img src="{{'images/Sibyl-icon+text.svg' | relative_url }}" width="260"  class="d-inline-block align-top logo" alt="Sibyl logo" loading="lazy">
               </div>
             </div>
             <h2 class="h3">Making Machine Learning Usable</h2>
