--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -47,13 +47,13 @@
           {% if forloop.first %}
           <div class="embed-responsive-item tab-pane bg-white active" id="v-pills-{{ item.slug }}" role="tabpanel" aria-labelledby="v-pills-{{ item.slug }}-tab">
             <div class="w-100 h-100 d-flex align-items-center">
-              <img class="px-2 py-3 px-md-3 py-md-4" src="{{ item.image }}"/>
+              <img class="px-2 py-3 px-md-3 py-md-4 w-100" style="object-fit: contain; object-position: center;" src="{{ item.image }}"/>
             </div>
           </div>
           {% else %}
           <div class="embed-responsive-item tab-pane bg-white" id="v-pills-{{ item.slug }}" role="tabpanel" aria-labelledby="v-pills-{{ item.slug }}-tab">
             <div class="w-100 h-100 d-flex align-items-center">
-              <img class="px-2 py-3 px-md-3 py-md-4" src="{{ item.image }}"/>
+              <img class="px-2 py-3 px-md-3 py-md-4 w-100" style="object-fit: contain; object-position: center;" src="{{ item.image }}"/>
             </div>
           </div>
           {% endif %}
