--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,19 @@
     <link rel="icon" type="image/png" href="{{'/images/favicon.png' | absolute_url}}"/>
     <link rel="apple-touch-icon" href="{{'/images/favicon.png' | absolute_url}}">
 
+    <style>
+      img[src$=".jpg"] {
+        image-rendering: -moz-crisp-edges; 
+        image-rendering: -o-crisp-edges; 
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: crisp-edges;
+        -ms-interpolation-mode: nearest-neighbor; 
+      }
+      img {
+        image-rendering: pixelated;
+      }
+    </style>
+
   </head>
   <body>
     {% include nav.html %}
