--- a/_includes/papers.html
+++ b/_includes/papers.html
@@ -4,14 +4,34 @@
 <div class="container">
   {% include heading.html classname="text-center" title="Sibyl Research" %}
   <div class="row justify-content-start my-4">
-    {% for item in site.data.papers %}
-      {% if item.image != null %}
-      <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <a class="outer is-paper d-block hover-opacity" href="{{ item.url }}" target="_blank">
-          <img src="/images/papers/{{ item.image }}" alt="{{ item.name }}" class="inner d-block paper obj-cover">
-        </a>
+    {% for item in site.data.publications %}
+      <div class="row justify-content-center my-5 my-md-4">
+        <div class="col-9 col-md-auto" style="width: 12rem;">
+          <div class="bg-white">
+            <img class="mx-auto d-block w-100 mb-3 mb-lg-0"
+              src="{{ item.image }}" alt="{{ item.title }}" />
+          </div>
+        </div>
+        <div class="col-md col-12">
+          <p class="font-weight-bold h6 text-secondary mb-1">{{ item.title }}</p>
+          <p class="text-secondary mb-1">{{ item.subtitle }}</p>
+          <p class="text-secondary mb-1">
+            <span class="badge badge-secondary">
+              {{ item.tag }}
+            </span>
+            {{ item.tag_text }}</p>
+          <p class=" mb-1">
+            Download: 
+            {% for link in item.links %}
+              <a href="{{ link.url }}" target="_blank">[{{ link.name }}]</a>
+            {% endfor %}
+            {% if item.cta_url != null and item.cta_text != null%}
+            | 🏆
+            <a href="{{ item.cta_url }}" target="_blank" class="text-warning">{{ item.cta_text }}</a>
+            {% endif %}
+          </p>
+        </div>
       </div>
-      {% endif %}
     {% endfor %}
   </div>
 </div>
